--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "overlay-fishnet",
+  "name": "fishnet-plot",
   "version": "0.0.0",
   "description": "Overlay polygon with equal sized tiles (like a fishnet)",
   "main": "dist/index.js",
