--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "fishnet-plot",
   "version": "0.0.0",
-  "description": "Overlay polygon with equal sized tiles (like a fishnet)",
-  "main": "dist/index.js",
+  "description": "Generate tile representations of polygon object",
+  "main": "src/index.js",
   "scripts": {
     "build": "rm -rf dist && mkdir dist && babel src --out-dir dist",
     "prepublish": "npm run test && npm run build",
@@ -29,5 +29,11 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-3": "^6.17.0",
     "standard": "^8.6.0"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "stage-3"
+    ]
   }
 }
