--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "fishnet-plot",
-  "version": "0.0.0",
-  "description": "Generate tile representations of polygon object",
-  "main": "src/index.js",
+  "name": "hextile",
+  "version": "1.0.0",
+  "description": "Generate tile representations of polygon objects",
+  "main": "dist/index.js",
   "scripts": {
     "build": "rm -rf dist && mkdir dist && babel src --out-dir dist",
     "prepublish": "npm run test && npm run build",
     "test": "standard"
   },
+  "bin": {
+    "hextile": "bin/hextile.js"
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yongjun21/fishnet.git"
+    "url": "git+https://github.com/yongjun21/hextile.git"
   },
   "keywords": [
     "geospatial",
@@ -21,9 +24,9 @@
   "author": "Yong Jun",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/yongjun21/fishnet/issues"
+    "url": "https://github.com/yongjun21/hextile/issues"
   },
-  "homepage": "https://github.com/yongjun21/fishnet#readme",
+  "homepage": "https://github.com/yongjun21/hextile#readme",
   "dependencies": {
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
