--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hextile",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Generate tile representations of polygon objects",
   "main": "dist/index.js",
   "scripts": {
@@ -28,6 +28,9 @@
   },
   "homepage": "https://github.com/yongjun21/hextile#readme",
   "dependencies": {
+    "lodash": "^4.17.4"
+  },
+  "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-3": "^6.17.0",
