--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hextile",
-  "version": "1.0.6",
+  "version": "1.1.0",
   "description": "Generate tile representations of polygon objects on map",
   "main": "dist/index.js",
   "scripts": {
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yongjun21/hextile.git"
+    "url": "git+https://github.com/datagovsg/hextile.git"
   },
   "keywords": [
     "geospatial",
@@ -24,9 +24,9 @@
   "author": "Yong Jun",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/yongjun21/hextile/issues"
+    "url": "https://github.com/datagovsg/hextile/issues"
   },
-  "homepage": "https://github.com/yongjun21/hextile#readme",
+  "homepage": "https://github.com/datagovsg/hextile#readme",
   "dependencies": {
     "lodash": "^4.17.4"
   },
